feat: add Vaadin 24 view module (4th frontend implementation)
- New module br.com.wdc.shopping.view.vaadin with Vaadin 24.6.3 + Jetty 12
- Server-side UI using native Vaadin components (LoginForm, Grid, Badge,
  IntegerField, Notification, Icon, Scroller, ButtonVariant)
- Lumo theme with design tokens (var(--lumo-*)) throughout CSS
- Hash-based URL navigation with HMAC-SHA256 signed URLs (IntentSigner)
- F5 state restoration via APP_CACHE + recreate() pattern
- Programmatic UI builder (VaadinDom) analogous to JfxDom
- Sidebar layout for purchase history with compact cards and pagination
- Screenshots of all screens in docs/screenshots/
- Updated all project READMEs to reference the new Vaadin implementation
- Added Vaadin generated files to .gitignore